[package]
name = "rust-delta-crdts"
version = "0.1.0"
authors = ["Jean-Marc Le Roux <jeanmarc.leroux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
dcrdt-macro = { path = "./crates/dcrdt-macro" }
num-traits = "0.2.12"
