[package]
name = "dcrdt-macro"
version = "0.1.0"
authors = ["Jean-Marc Le Roux <jeanmarc.leroux@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.42", features = ["full", "fold" ] }
proc-macro2 = "1.0.23"
quote = "1.0.7"
